--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.2",
     "stripe": "^14.14.0",
-    "web3": "^4.5.0"
+    "web3": "^4.5.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
