--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@metamask/providers": "^19.0.0",
     "@stripe/stripe-js": "^2.4.0",
+    "@typechain/hardhat": "^9.1.0",
+    "ethers": "^6.13.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.2",
     "stripe": "^14.14.0",
+    "typechain": "^8.3.2",
     "web3": "^4.5.0",
     "zustand": "^5.0.2"
   },
