--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "@stripe/stripe-js": "^2.4.0",
     "@typechain/hardhat": "^9.1.0",
     "ethers": "^6.13.5",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.2",
     "stripe": "^14.14.0",
     "typechain": "^8.3.2",
+    "viem": "^2.22.23",
     "web3": "^4.5.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/leaflet": "^1.9.16",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
