--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,10 @@ DBDATABASE=paxcel
 DBPASSWORD=2001
 DBPORT=5432
 JWT_SECRET=your_jwt_secret
+
+# Do not expose your Neon credentials to the browser
+
+PGHOST='ep-summer-paper-a468u2lw-pooler.us-east-1.aws.neon.tech'
+PGDATABASE='neondb'
+PGUSER='neondb_owner'
+PGPASSWORD='npg_8t6LKOSDHomj'
