--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@metamask/providers": "^19.0.0",
     "@stripe/stripe-js": "^2.4.0",
+    "@tanstack/react-query": "^5.66.0",
     "@typechain/hardhat": "^9.1.0",
-    "ethers": "^6.13.5",
+    "buffer": "^6.0.3",
+    "ethers": "^5.7.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
     "pg": "^8.13.1",
