--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/swagger-jsdoc": "^6.0.4",
