--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@metamask/providers": "^19.0.0",
     "@stripe/stripe-js": "^2.4.0",
     "@typechain/hardhat": "^9.1.0",
+    "axios": "^1.7.9",
     "ethers": "^6.13.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
