--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
     "@metamask/providers": "^19.0.0",
     "@stripe/stripe-js": "^2.4.0",
     "@tanstack/react-query": "^5.66.0",
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
     "@typechain/hardhat": "^9.1.0",
     "axios": "^1.7.9",
-    "ethers": "^6.13.5",
     "buffer": "^6.0.3",
     "ethers": "^5.7.2",
     "leaflet": "^1.9.4",
