--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.66.0",
     "@typechain/hardhat": "^9.1.0",
     "buffer": "^6.0.3",
+    "dotenv": "^16.4.7",
     "ethers": "^5.7.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
