chore: updated .env

--- a/backend/.env
+++ b/backend/.env
@@ -6,6 +6,8 @@ DBPASSWORD=2001
 DBPORT=5432
 JWT_SECRET=your_jwt_secret
 
+NODE_ENV="development"
+
 # Do not expose your Neon credentials to the browser
 
 PGHOST='ep-summer-paper-a468u2lw-pooler.us-east-1.aws.neon.tech'
