--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -4,20 +4,23 @@
     "password": "2001",
     "database": "paxcel",
     "host": "localhost",
-    "dialect": "postgres"
+    "dialect": "postgres" 
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect":"sqlite",
+    "storage":"./db.sqlite3"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "neondb_owner",
+    "password": "npg_8t6LKOSDHomj",
+    "database": "neondb",
+    "host": "ep-summer-paper-a468u2lw-pooler.us-east-1.aws.neon.tech",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   }
 }
