--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@metamask/providers": "^19.0.0",
+    "@particle-network/connectkit": "^2.0.15",
     "@stripe/stripe-js": "^2.4.0",
     "@tanstack/react-query": "^5.66.0",
     "@typechain/hardhat": "^9.1.0",
